# AuditForge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  auditforge.toml  deny.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/knowledge_base/: Cargo.toml
crates/knowledge_base/src/: lib.rs
crates/rules/: Cargo.toml
crates/rules/src/: access_control.rs  delegatecall.rs  lib.rs  overflow.rs  reentrancy.rs  tx_origin.rs  unchecked_return.rs  uninitialized_storage.rs
crates/solc-parser/: Cargo.toml
crates/solc-parser/src/: lib.rs
examples/: legacy_token.sol  simple.sol  unsafe_proxy.sol  vulnerable_bank.sol
