[workspace]
members = [
    "crates/core",
    "crates/solc-parser",
    "crates/rules",
    "crates/cli",
    "crates/knowledge_base",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["AuditForge Team"]
repository = "https://github.com/example/auditforge"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
indicatif = "0.17"
petgraph = "0.6"
regex = "1.10"
once_cell = "1.19"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[workspace.lints.rust]
unused_must_use = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
