[package]
name = "auditforge-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core traits, AST model, registry, and config for AuditForge"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
petgraph.workspace = true
regex.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
rayon.workspace = true
tracing.workspace = true
uuid.workspace = true


