[package]
name = "auditforge-solc-parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Solidity parser wrapper for AuditForge using solc JSON AST"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
auditforge-core = { path = "../core" }

[dev-dependencies]
tempfile = "3.10"
